CHANGELOG

Version 0.2
* Relocation of templates and xslt files
* Enable gem configuration to set the location of default and custom word templates and xslt.
* Allow the Htmltoword::Document.create to receive custom templates
* Add .docx as a renderer when used with rails.

Version 0.1.8
* Better alignment of text within a paragraph, div or table cell if it has a 'center', 'left', 'right', 'justify' class or by using the text-align property.
* Support for table-bordered class on tables
* Support for bold and italic text on table cells
* Support for h1..h6 on table cells
* Support for nested tables
* Bugfix: thead without tr tag
* Bugfix: nested bold and italic on paragraphs or div
* Bugfix: allow <td><div>Some content <em>inside</em> a <strong>div</strong></div></td> syntax
* Bugfix: Headings in body tag are now correctly parsed

Version 0.1.7
* Allow centering of text within a paragraph if the paragraph has a 'center' class, e.g. <p class='center'>

Version 0.1.6:
* Add tables support for borders and headers
 
Version 0.1.5:
* Bugfix: h5 & h6 also create w:p's so any wrapping divs dont need to.

Version 0.1.4:
* Details tag doesnt really work well for printing. By default its closed and not visible until you click on the summary so for now lets ignore it in the print out.

Version 0.1.3:
* Bugfix: Leaf i and b nodes with w:p creating siblings need to create their own w:p's.

Version 0.1.2:
* Bugfix: span.h (MS Word Highlights) with sibling block elements could result in invalid wordml.

Version 0.1.1:
* Nodes with neighbor nodes that create w:p's need to be wrapped in w:p themselves.
* Fixed test suite.

Version 0.1.0:
* Rewrote xslt to support tables and updated rubyzip to v1.

Version 0.0.1:
* First basic implementation of htmltoword released.