@@ -20,7 +20,7 @@ Gem::Specification.new do |spec|
 
   spec.add_dependency "actionpack"
   spec.add_dependency "nokogiri"
-  spec.add_dependency "rubyzip"
+  spec.add_dependency "rubyzip", ">= 1.0"
   spec.add_development_dependency "rspec"
   spec.add_development_dependency "bundler"
   spec.add_development_dependency "rake"
