@@ -1,5 +1,9 @@
 CHANGELOG
 
+Version (NEXT)
+* Do not render output to file, but rather to a buffer.
+  This means that apps using the gem no longer needs write permissions on a filesystem.
+
 Version 0.2
 * Relocation of templates and xslt files
 * Enable gem configuration to set the location of default and custom word templates and xslt.
@@ -22,7 +26,7 @@ Version 0.1.7
 
 Version 0.1.6:
 * Add tables support for borders and headers
- 
+
 Version 0.1.5:
 * Bugfix: h5 & h6 also create w:p's so any wrapping divs dont need to.
 
